Fixed UI bugs: text-trunc & mobile layout bugs

--- a/src/assets/styles/cmps/_post-preview.scss
+++ b/src/assets/styles/cmps/_post-preview.scss
@@ -44,6 +44,7 @@
   .right-wrapper {
     display: flex;
     flex-direction: column;
+    min-width: 0;
   }
   .header {
     display: flex;
