--- a/src/assets/styles/cmps/_user-preview.scss
+++ b/src/assets/styles/cmps/_user-preview.scss
@@ -3,10 +3,12 @@
   display: flex;
   align-items: center;
   cursor: pointer;
+  min-width: 0;
 
   .img-container {
     margin-right: 12px;
     display: flex;
+
     .user-img {
       width: 48px;
       height: 48px;
@@ -15,6 +17,8 @@
 
   .preview-content {
     width: 100%;
+    min-width: 0;
+    overflow: hidden;
   }
 
   .user-info-container {
@@ -23,15 +27,18 @@
     align-items: center;
     width: 100%;
     height: 40px;
+    gap: 12px;
     .info {
       display: flex;
       flex-direction: column;
       justify-content: center;
+      flex-shrink: 1;
+      flex-grow: 1;
+      flex-basis: 0;
       .full-name {
         font-size: 1rem;
         line-height: 20px;
         margin-bottom: 2px;
-        width: fit-content;
       }
 
       .username {
