--- a/src/assets/styles/cmps/_who-to-follow.scss
+++ b/src/assets/styles/cmps/_who-to-follow.scss
@@ -5,4 +5,8 @@
     font-weight: 800;
     line-height: 24px;
   }
+
+  .user-preview .user-info-container .info {
+    width: 0;
+  }
 }
